--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Share page with social network services."
+    "message": "Share page with social networking services."
   },
   "extensionName": {
     "message": "Share page with SNS"
