--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "ページをソーシャルネットワークサービスで共有します。"
+    "message": "ページをソーシャルネットワーキングサービスで共有します。"
   },
   "extensionName": {
     "message": "ページをSNSで共有"
