--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -5,6 +5,9 @@
   "extensionName": {
     "message": "Share page with SNS"
   },
+  "extensionLocale": {
+    "message": "en"
+  },
   "extensionShortName": {
     "message": "Share"
   },
