Add share link within page

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -11,7 +11,10 @@
   "extensionShortName": {
     "message": "Share"
   },
-  "twitter": {
+  "linkTwitter": {
+    "message": "Share link with Twitter"
+  },
+  "pageTwitter": {
     "message": "Share page with Twitter"
   }
 }
