--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "extensionDescription": {
-    "message": "Share page and link with social networking services."
+    "message": "Share page or link with social networking services."
   },
   "extensionName": {
     "message": "Share with SNS"
