--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -20,8 +20,8 @@
       }
     }
   },
-  "optionsMastodonInstanceNote": {
-    "message": "You need to register your Mastodon instance as a program to handle \"web+mastodon://\" protocol from \"about:preferences\"."
+  "optionsMastodonInstanceUrlNote": {
+    "message": "If the browser has been registered to handle the \"web+mastodon:\" protocol, leave the Instance URL input field empty. To check whether it is registered or not, refer to \"Applications\" from \"about:preferences\"."
   },
   "optionsTitle": {
     "message": "Share with SNS - Options"
