--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -20,8 +20,8 @@
       }
     }
   },
-  "optionsMastodonInstanceNote": {
-    "message": "\"about:preferences\"から、\"web+mastodon://\"プロトコルを取り扱うプログラムとして、マストドンのインスタンスを関連付ける必要があります。"
+  "optionsMastodonInstanceUrlNote": {
+    "message": "ブラウザに \"web+mastodon:\" プロトコルへの関連付けが登録済みの場合、インスタンス URL の入力フィールドは空のままで構いません。関連付けがされているかどうかを確認するには、 \"about:preferences\" から \"プログラム\" を参照してください。"
   },
   "optionsTitle": {
     "message": "SNSで共有 - 設定"
