--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -21,7 +21,7 @@
     }
   },
   "optionsMastodonInstanceUrlNote": {
-    "message": "If the browser has been registered to handle the \"web+mastodon:\" protocol, leave the Instance URL input field empty. To check whether it is registered or not, refer to \"Applications\" from \"about:preferences\"."
+    "message": "If the browser is registered to handle the \"web+mastodon:\" protocol, leave the Instance URL input field empty. To check whether it is registered, refer to \"Applications\" section from \"about:preferences\"."
   },
   "optionsTitle": {
     "message": "Share with SNS - Options"
