Fix localization placeholder

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -27,7 +27,7 @@
     "message": "Share with SNS - Options"
   },
   "shareLink": {
-    "message": "Share link with $SNS",
+    "message": "Share link with $SNS$",
     "placeholders": {
       "sns" : {
         "content" : "$1",
