--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -23,6 +23,9 @@
   "optionsMastodonInstanceUrlNote": {
     "message": "如果浏览器已注册了 web+mastodon: 协议的处理程序，请将 Instance URL 框留空。要检查它是否已注册，在 about:preferences - “应用程序”中检查。"
   },
+  "optionsLabel": {
+    "message": "选项"
+  },
   "optionsTitle": {
     "message": "Share with SNS - 选项"
   },
