--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -11,6 +11,9 @@
   "extensionShortName": {
     "message": "共有"
   },
+  "optionalSettings": {
+    "message": "オプション設定"
+  },
   "optionsEnableSnsDetail": {
     "message": "$SNS$ との共有を有効化します。",
     "placeholders": {
@@ -22,6 +25,12 @@
   },
   "optionsLabel": {
     "message": "設定"
+  },
+  "optionsPreferCanonicalUrl": {
+    "message": "正規URLが存在する場合はそれを優先する"
+  },
+  "optionsPreferCanonicalUrlDetail": {
+    "message": "正規URLがウェブページに存在する場合には正規URLを使用します。"
   },
   "optionsTitle": {
     "message": "SNSで共有 - 設定"
