Add options context menu to toolbar button

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -11,6 +11,15 @@
   "extensionShortName": {
     "message": "Share"
   },
+  "openOptions_menu": {
+    "message": "Op&tions",
+    "placeholders": {
+      "key": {
+        "content": "$1",
+        "example": "(&T)"
+      }
+    }
+  },
   "optionalSettings": {
     "message": "Optional Settings"
   },
