--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -11,6 +11,15 @@
   "extensionShortName": {
     "message": "共有"
   },
+  "openOptions_menu": {
+    "message": "設定 $KEY$",
+    "placeholders": {
+      "key": {
+        "content": "$1",
+        "example": "(&T)"
+      }
+    }
+  },
   "optionalSettings": {
     "message": "オプション設定"
   },
